MS: added moduls to module-info and jlink to fix handshake error when running